# bento-service

qwen3-8b/: pyproject.toml
sglang-template/: README.md  build-bentoml-static.sh  build-bentoml.sh  conf-prod.yaml  conf.yaml  local-model.yaml  minimax.yaml  pyproject.toml  requirements.txt  service-deepseek.py  service.py  service.py.bak
sglang-template/docker/: Dockerfile  Dockerfile.blackwell.bentoml  Dockerfile.blackwell.bentoml-static
vllm-template/: build-bentoml.sh  conf-prod.yaml  conf.yaml  minimax.yaml  pyproject.toml  qwen3.yaml  requirements.txt  service.py
vllm-template/docker/: Dockerfile  Dockerfile.blackwell.bentoml
