[project]
name = "qwen3-8b"
version = "1.4.33"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "minimax-m2-5"
gpu_type = "nvidia-h100-80gb"
tp = 4
model_id = "MiniMaxAI/MiniMax-M2.5"
cli_args = [
  "--served-model-name",
  "MiniMaxAI/MiniMax-M2.5",
  "--trust-remote-code",
  "--enable-auto-tool-choice",
  "--tool-call-parser",
  "minimax_m2",
  "--reasoning-parser",
  "minimax_m2",
  "--gpu-memory-utilization",
  "0.8",
  "--max-model-len",
  "196k",
  "--max-num-seqs",
  "16",
  "--disable-custom-all-reduce",
  "--kv-cache-dtype",
  "fp8",
]

[tool.bentoml.build.args.metadata]
description = "MiniMax M2.5"
provider = "MiniMax"
gpu_recommendation = "an Nvidia GPU with at least 80GB VRAM (e.g about 1 H100 GPU)."

[tool.bentoml.build.args.hf_generation_config]
temperature = 0.6
top_p = 0.9
repetition_penalty = 1.0

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
